Replace spaCy with allenai-specter

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -34,6 +34,7 @@
     "#from pyalex import Works, Authors, Sources, Institutions, Topics, Publishers, Funders, Concepts\n",
     "import pyalex # importing full package seems to be the only way to call `pyalex.config.email = email_address`\n",
     "import pandas as pd\n",
+    "from sentence_transformers import SentenceTransformer\n",
     "from os import path\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm.notebook import tqdm\n",
@@ -214,6 +215,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the pre-trained SPECTER model by allenai (designed for scientific documents). We pre-load the model here, so that we don't need to do that per class instance.\n",
+    "\n",
+    "Citation information can be found here: https://github.com/allenai/specter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SentenceTransformer(\"allenai-specter\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -222,8 +241,11 @@
     "# set the dict to overwrite the default class attribute specified in src/open_alex_helpers.py\n",
     "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset\n",
     "\n",
-    "# Apply the function to each row\n",
-    "extraction_series = pubs_unabbrev_df.progress_apply(find_phd_and_supervisors_in_row, axis=1)\n",
+    "# Apply the function to each row with a constant, preloaded model\n",
+    "extraction_series = pubs_unabbrev_df.progress_apply(\n",
+    "    lambda row: find_phd_and_supervisors_in_row(row, model),\n",
+    "    axis=1\n",
+    "    )\n",
     "\n",
     "# Concatenate all DataFrames into one\n",
     "extraction_df = pd.concat(list(extraction_series), ignore_index=True)\n",
@@ -342,11 +364,13 @@
     "# Apply the categorization function to create a new column\n",
     "count_phds_df['match_category'] = count_phds_df.apply(determine_category, axis=1)\n",
     "\n",
+    "bar_categories = ['Not found', 'Fuzzy only', 'Fuzzy + affiliation', 'Exact only', 'Exact + affiliation']\n",
+    "confirmed_categories = bar_categories[1:]\n",
+    "\n",
     "# Count the number of PhDs per match category\n",
-    "match_counts = count_phds_df['match_category'].value_counts()\n",
+    "match_counts = count_phds_df['match_category'].value_counts().reindex(bar_categories)\n",
     "\n",
     "# Calculate number of confirmed PhDs (those falling into the four confirmed categories)\n",
-    "confirmed_categories = ['Fuzzy only', 'Fuzzy + affiliation', 'Exact only', 'Exact + affiliation']\n",
     "n_confirmed_phds = count_phds_df['match_category'].isin(confirmed_categories).sum()\n",
     "\n",
     "# Create a bar plot of the categories\n",
