Update plot to include near exact match

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -325,12 +325,11 @@
    "source": [
     "# Ensure one row per PhD by dropping duplicate names\n",
     "count_phds_df = extraction_df[\n",
-    "    ['phd_name', 'phd_id', 'phd_match_by', 'affiliation_match', 'exact_match']\n",
+    "    ['phd_name', 'phd_id', 'phd_match_by', 'affiliation_match', 'near_exact_match', 'exact_match']\n",
     "].drop_duplicates(subset='phd_name')\n",
     "\n",
     "n_phds = len(count_phds_df)\n",
     "\n",
-    "# Fix downcasting warning by calling infer_objects after fillna for the matching columns\n",
     "count_phds_df['affiliation_match'] = (\n",
     "    count_phds_df['affiliation_match']\n",
     "    .fillna(False)\n",
@@ -342,18 +341,19 @@
     "\n",
     "# Function to assign a match category based on the flags and phd_id\n",
     "def determine_category(row):\n",
-    "    # PhD not found if phd_id is empty or NaN\n",
-    "    if pd.isna(row['phd_id']) or row['phd_id'] == '':\n",
-    "        return 'Not found'\n",
     "    # If a PhD was found but not confirmed (i.e. no match information)\n",
-    "    elif pd.isna(row['phd_match_by']):\n",
+    "    if pd.isna(row['phd_match_by']):\n",
     "        return 'Not confirmed'\n",
     "    else:\n",
     "        # Confirmed PhDs: split by exact and affiliation match\n",
-    "        if not row['exact_match'] and not row['affiliation_match']:\n",
+    "        if not row['exact_match'] and not row['affiliation_match'] and not row['near_exact_match']:\n",
     "            return 'Fuzzy only'\n",
-    "        elif not row['exact_match'] and row['affiliation_match']:\n",
+    "        elif not row['exact_match'] and row['affiliation_match'] and not row['near_exact_match']:\n",
     "            return 'Fuzzy + affiliation'\n",
+    "        elif row['near_exact_match'] and not row['affiliation_match'] and not row['exact_match']:\n",
+    "            return 'Near exact only'\n",
+    "        elif row['near_exact_match'] and row['affiliation_match'] and not row['exact_match']:\n",
+    "            return 'Near exact + affiliation'\n",
     "        elif row['exact_match'] and not row['affiliation_match']:\n",
     "            return 'Exact only'\n",
     "        elif row['exact_match'] and row['affiliation_match']:\n",
@@ -364,7 +364,15 @@
     "# Apply the categorization function to create a new column\n",
     "count_phds_df['match_category'] = count_phds_df.apply(determine_category, axis=1)\n",
     "\n",
-    "bar_categories = ['Not found', 'Fuzzy only', 'Fuzzy + affiliation', 'Exact only', 'Exact + affiliation']\n",
+    "bar_categories = [\n",
+    "    'Not confirmed',\n",
+    "    'Fuzzy only',\n",
+    "    'Fuzzy + affiliation',\n",
+    "    'Near exact only',\n",
+    "    'Near exact + affiliation',\n",
+    "    'Exact only',\n",
+    "    'Exact + affiliation'\n",
+    "    ]\n",
     "confirmed_categories = bar_categories[1:]\n",
     "\n",
     "# Count the number of PhDs per match category\n",
