Implicitly merge contributors with the same name and correct institution at graduation by collecting ALL their publications Closes #28

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -263,6 +263,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"We managed to find contributors with {extraction_df['n_shared_inst_grad'].sum()} shared institutions and {extraction_df['n_shared_pubs'].sum()} shared publications!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -374,6 +383,7 @@
     "    'Exact + affiliation'\n",
     "    ]\n",
     "confirmed_categories = bar_categories[1:]\n",
+    "\n",
     "\n",
     "# Count the number of PhDs per match category\n",
     "match_counts = count_phds_df['match_category'].value_counts().reindex(bar_categories)\n",
