Add more information to contributor plot

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -347,7 +347,7 @@
     ")\n",
     "\n",
     "# Function to assign a match category based on the flags and phd_id\n",
-    "def determine_category(row):\n",
+    "def determine_category_phd(row):\n",
     "    # If a PhD was found but not confirmed (i.e. no match information)\n",
     "    if pd.isna(row['phd_match_by']):\n",
     "        return 'Not confirmed'\n",
@@ -369,7 +369,7 @@
     "            return 'Other'\n",
     "\n",
     "# Apply the categorization function to create a new column\n",
-    "count_phds_df['match_category'] = count_phds_df.apply(determine_category, axis=1)\n",
+    "count_phds_df['match_category'] = count_phds_df.apply(determine_category_phd, axis=1)\n",
     "\n",
     "bar_categories = [\n",
     "    'Not confirmed',\n",
@@ -409,14 +409,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter out rows where 'phd_id' is Na, so that we only look at PhDs we could confirm\n",
-    "count_contrib_df = extraction_df.query('phd_id.notna()')[['contributor_name', 'sup_match_by']]\n",
+    "count_phds_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to assign a match category based on the flags\n",
+    "def determine_category_contrib(row):\n",
+    "    # If a contributor was found but not confirmed (i.e. no match information)\n",
+    "    if pd.isna(row['contributor_id']):\n",
+    "        return 'Not found/no affiliation match'\n",
+    "    else:\n",
+    "        # Confirmed contributors\n",
+    "        if row['contributor_confirmed']:\n",
+    "            return 'Found and confirmed'\n",
+    "        elif not row['contributor_confirmed'] and row['contributor_id']:\n",
+    "            return 'Found, but not confirmed'\n",
+    "        else:\n",
+    "            return 'Other'\n",
     "\n",
-    "# Replace NaN in 'sup_match_by' with 'Not confirmed'\n",
-    "count_contrib_df['sup_match_by'] = count_contrib_df['sup_match_by'].fillna('Not confirmed')\n",
+    "bar_categories = [\n",
+    "    #'Other',\n",
+    "    'Not found/no affiliation match',\n",
+    "    'Found, but not confirmed',\n",
+    "    'Found and confirmed'\n",
+    "]\n",
+    "\n",
+    "# Apply the categorization function to create a new column\n",
+    "extraction_df['match_category'] = extraction_df.apply(determine_category_contrib, axis=1)\n",
+    "\n",
+    "# filter out rows where 'phd_id' is Na, so that we only look at PhDs we could confirm\n",
+    "count_contrib_df = extraction_df.query('phd_id.notna()')[['contributor_name', 'match_category']]\n",
     "\n",
     "# Count how many contributors per match type\n",
-    "match_contrib_counts = count_contrib_df['sup_match_by'].value_counts()\n",
+    "match_contrib_counts = count_contrib_df['match_category'].value_counts().reindex(bar_categories)\n",
     "\n",
     "# Create a bar plot\n",
     "ax = match_contrib_counts.plot(kind='bar', color='#FFD54F')\n",
