Enrich dataset for analytics - Keep PhDs with match score = 0 - Show all title similarities

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -332,7 +332,7 @@
    "source": [
     "# Ensure one row per PhD by dropping duplicate names\n",
     "count_phds_df = extraction_df[\n",
-    "    ['phd_name', 'phd_id', 'phd_match_by', 'affiliation_match', 'near_exact_match', 'exact_match']\n",
+    "    ['phd_name', 'phd_id', 'phd_match_by', 'phd_match_score', 'affiliation_match', 'near_exact_match', 'exact_match']\n",
     "].drop_duplicates(subset='phd_name')\n",
     "\n",
     "n_phds = len(count_phds_df)\n",
@@ -353,6 +353,8 @@
     "        return 'Not confirmed'\n",
     "    else:\n",
     "        # Confirmed PhDs: split by exact and affiliation match\n",
+    "        if not row['phd_match_score']:\n",
+    "            return 'Name match, no other match'\n",
     "        if not row['exact_match'] and not row['affiliation_match'] and not row['near_exact_match']:\n",
     "            return 'Fuzzy only'\n",
     "        elif not row['exact_match'] and row['affiliation_match'] and not row['near_exact_match']:\n",
@@ -373,6 +375,7 @@
     "\n",
     "bar_categories = [\n",
     "    'Not confirmed',\n",
+    "    'Name match, no other match',\n",
     "    'Fuzzy only',\n",
     "    'Fuzzy + affiliation',\n",
     "    'Near exact only',\n",
@@ -418,10 +421,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "extraction_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Function to assign a match category based on the flags\n",
     "def determine_category_contrib(row):\n",
     "    # If a contributor was found but not confirmed (i.e. no match information)\n",
-    "    if pd.isna(row['contributor_id']):\n",
+    "    if not bool(row['contributor_id']): # returns False for None and zero length\n",
     "        return 'Not found/no affiliation match'\n",
     "    else:\n",
     "        # Confirmed contributors\n",
