Cache Open Alex API calls Closes #33
The total filesize of the cache for the entire NARCIS dataset (~100k Phds) should be between 30 and 50 GB).

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -42,9 +42,15 @@
     "from src.unabbreviate_institutions import unabbreviate_institutions\n",
     "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
     "from src.config_selector import get_dataset_selector\n",
+    "from src.api_cache_helpers import initialize_request_cache\n",
     "\n",
     "# Initialize tqdm for progress bars\n",
-    "tqdm.pandas()"
+    "tqdm.pandas()\n",
+    "\n",
+    "# Install the cache before any API calls are made.\n",
+    "# This will cache every API call to Open Alex and if a cached version of the call is available,\n",
+    "# it will be preferred over making a new API call.\n",
+    "initialize_request_cache()"
    ]
   },
   {
