Import only config from pyalex

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "#from pyalex import Works, Authors, Sources, Institutions, Topics, Publishers, Funders, Concepts\n",
-    "import pyalex # importing full package seems to be the only way to call `pyalex.config.email = email_address`\n",
+    "from pyalex import config # to set email_address\n",
     "import pandas as pd\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from os import path\n",
@@ -123,9 +123,9 @@
     "        email_address = file.read().strip()\n",
     "\n",
     "    # Assign the email address to the pyalex configuration\n",
-    "    pyalex.config.email = email_address\n",
+    "    config.email = email_address\n",
     "\n",
-    "pyalex.config.email"
+    "config.email"
    ]
   },
   {
