--- a/subset.ipynb
+++ b/subset.ipynb
@@ -7,9 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from datetime import datetime, timedelta"
+    "import numpy as np"
    ]
   },
   {
@@ -50,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filter for biomedical institutions"
+    "### Filter for biomedical institutions of recent years"
    ]
   },
   {
@@ -59,11 +57,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "biomedical = ['amcpub', 'lumc', 'vumc', 'umcu'] \n",
-    "df_subset = df.query('institution in @biomedical')\n",
-    "df_subset = df_subset.reset_index(drop=True)\n",
+    "df_domain = df.copy()\n",
     "\n",
-    "df_subset"
+    "# add domain column after institution columns\n",
+    "df_domain.insert(loc=df_domain.columns.get_loc(\"institution\") + 1, column=\"domain\", value=None)\n",
+    "\n",
+    "df_domain\n",
+    "\n",
+    "# biomedical institutions\n",
+    "biomedical = ['amcpub', 'lumc', 'vumc', 'umcu'] \n",
+    "\n",
+    "# pick a reference year for reproducibility\n",
+    "reference_year = 2024 # year where the study was conducted/started\n",
+    "year_diff = 5 # look up to 5 years back\n",
+    "\n",
+    "date_n_years_ago = reference_year - year_diff\n",
+    "\n",
+    "df_domain[\"domain\"] = np.where(\n",
+    "    (df_domain[\"institution\"].isin(biomedical)) & (df_domain[\"year\"] >= date_n_years_ago),\n",
+    "    \"biomedical\",\n",
+    "    None\n",
+    ")\n",
+    "\n",
+    "df_domain"
    ]
   },
   {
@@ -71,24 +87,6 @@
    "metadata": {},
    "source": [
     "### Filter out publications that are older than 5 years"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pick a reference year for reproducibility\n",
-    "reference_year = 2024 # year where the study was conducted/started\n",
-    "year_diff = 5 # look up to 5 years back\n",
-    "\n",
-    "date_n_years_ago = reference_year - year_diff\n",
-    "\n",
-    "df_recent = df_subset.query('year >= @date_n_years_ago')\n",
-    "df_recent = df_recent.reset_index(drop=True)\n",
-    "\n",
-    "df_recent\n"
    ]
   },
   {
@@ -104,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_filter = df_recent.copy()\n",
+    "df_filter = df_domain.copy()\n",
     "\n",
     "# get rid of contributors that start with comma or \"Surgery\"\n",
     "contributor_columns = df_filter.filter(like=\"contributor_\").columns # Apply the replacement only to the \"contributor_\" columns\n",
@@ -135,7 +133,6 @@
    "source": [
     "df_final = df_filter.copy()\n",
     "df_final = df_final.dropna(subset=['phd_name', 'title', 'contributor_1'])\n",
-    "df_final = df_final.drop_duplicates(subset=['phd_name'], keep='last')\n",
     "\n",
     "df_final = df_final.reset_index(drop=True)\n",
     "\n",
@@ -155,13 +152,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final.to_csv('data/cleaned/pubs_biomedical5y.csv', index=False)"
+    "df_final.to_csv('data/cleaned/pubs_with_domain.csv', index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.3)",
    "language": "python",
    "name": "python3"
   },
