Simplify subset selection and allow to choose a chunk size and id for sequential runs

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "from src.unabbreviate_institutions import unabbreviate_institutions\n",
     "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
-    "from src.config_selector import get_dataset_selector\n",
+    "from src.dataset_config_helpers import read_config, load_dataset\n",
     "from src.api_cache_helpers import initialize_request_cache\n",
     "\n",
     "# Initialize tqdm for progress bars\n",
@@ -51,30 +51,6 @@
     "# This will cache every API call to Open Alex and if a cached version of the call is available,\n",
     "# it will be preferred over making a new API call.\n",
     "initialize_request_cache()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create and display the selector\n",
-    "selector = get_dataset_selector()\n",
-    "selector.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NROWS = selector.NROWS\n",
-    "use_dataset = selector.use_dataset\n",
-    "output_filename = selector.output_filename\n",
-    "\n",
-    "print(f\"Now using dataset: {use_dataset} with NROWS={NROWS}\")"
    ]
   },
   {
@@ -148,26 +124,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if NROWS == None:\n",
-    "    output_filename = 'data/output/matched_pairs_full.csv'\n",
-    "else:\n",
-    "    output_filename = f'data/output/matched_pairs_{NROWS}_rows.csv'\n",
+    "dataset_path = 'data/cleaned/pubs_with_domain.csv'\n",
     "\n",
-    "if use_dataset == 'biomedical_5y':\n",
-    "    # biomedical subset\n",
-    "    pubs_df = pd.read_csv('data/cleaned/pubs_biomedical5y.csv')\n",
-    "else:\n",
-    "    # general dataset\n",
-    "    pubs_df = pd.read_csv('data/cleaned/pubs.csv')\n",
+    "config = read_config('dataset_config.yaml')\n",
     "\n",
-    "# Take a sample\n",
-    "\n",
-    "if NROWS == None:\n",
-    "    n_sample = len(pubs_df)\n",
-    "else:\n",
-    "    n_sample = NROWS\n",
-    "\n",
-    "pubs_df = pubs_df.sample(n=n_sample, random_state=42).reset_index(drop=True)\n",
+    "pubs_df = load_dataset(config, dataset_path)\n",
     "\n",
     "pubs_df"
    ]
