--- a/subset.ipynb
+++ b/subset.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "df_domain[\"domain\"] = np.where(\n",
     "    (df_domain[\"institution\"].isin(biomedical)) & (df_domain[\"year\"] >= date_n_years_ago),\n",
-    "    \"biomedical\",\n",
+    "    \"biomedical_recent\",\n",
     "    None\n",
     ")\n",
     "\n",
