Rework bar plots to show all cases for results Closes #42

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -175,6 +175,14 @@
     "# Count non-missing contributor entries per row\n",
     "pubs_unabbrev_df['contributor_count'] = pubs_unabbrev_df[contributor_cols].notna().sum(axis=1)\n",
     "\n",
+    "# Reorder columns to place contributor_count after institution\n",
+    "cols = list(pubs_unabbrev_df.columns)\n",
+    "if 'institution' in cols and 'contributor_count' in cols:\n",
+    "    cols.remove('contributor_count')\n",
+    "    institution_index = cols.index('institution')\n",
+    "    cols.insert(institution_index + 1, 'contributor_count')\n",
+    "    pubs_unabbrev_df = pubs_unabbrev_df[cols]\n",
+    "\n",
     "# Filter and sort\n",
     "pubs_more_than_n_df = (\n",
     "    pubs_unabbrev_df[pubs_unabbrev_df['contributor_count'] >= 4]\n",
@@ -185,6 +193,7 @@
     "print(f\"There are {pubs_more_than_n_df.shape[0]} PhD candidates with 4 or more supervisors\")\n",
     "\n",
     "pubs_more_than_n_df\n",
+    "\n",
     "\n"
    ]
   },
@@ -361,11 +370,11 @@
     "def determine_category_phd(row):\n",
     "    # If a PhD was found but not confirmed (i.e. no match information)\n",
     "    if pd.isna(row['phd_match_by']):\n",
-    "        return 'Not confirmed'\n",
+    "        return 'Not found in Open Alex at all'\n",
     "    else:\n",
     "        # Confirmed PhDs: split by exact and affiliation match\n",
     "        if not row['phd_match_score']:\n",
-    "            return 'Name match, no other match'\n",
+    "            return 'Found, but no other match, i.e. not confirmed'\n",
     "        if not row['exact_match'] and not row['affiliation_match'] and not row['near_exact_match']:\n",
     "            return 'Fuzzy only'\n",
     "        elif not row['exact_match'] and row['affiliation_match'] and not row['near_exact_match']:\n",
@@ -385,8 +394,8 @@
     "count_phds_df['match_category'] = count_phds_df.apply(determine_category_phd, axis=1)\n",
     "\n",
     "bar_categories = [\n",
-    "    'Not confirmed',\n",
-    "    'Name match, no other match',\n",
+    "    'Not found in Open Alex at all',\n",
+    "    'Found, but no other match, i.e. not confirmed',\n",
     "    'Fuzzy only',\n",
     "    'Fuzzy + affiliation',\n",
     "    'Near exact only',\n",
@@ -444,29 +453,34 @@
     "# Function to assign a match category based on the flags\n",
     "def determine_category_contrib(row):\n",
     "    # If a contributor was found but not confirmed (i.e. no match information)\n",
-    "    if not bool(row['contributor_id']): # returns False for None and zero length\n",
-    "        return 'Not found/no affiliation match'\n",
+    "    if pd.isnull(row['contributor_id']) or not row['contributor_id']:\n",
+    "        return 'Not found'\n",
     "    else:\n",
-    "        # Confirmed contributors\n",
-    "        if row['contributor_confirmed']:\n",
-    "            return 'Found and confirmed'\n",
-    "        elif not row['contributor_confirmed'] and row['contributor_id']:\n",
-    "            return 'Found, but not confirmed'\n",
+    "        if not row['n_shared_pubs'] and not row['same_grad_inst']:\n",
+    "            return 'No shared publications or affiliation at graduation'\n",
+    "        elif not row['n_shared_pubs'] and row['same_grad_inst']:\n",
+    "            return 'Shared affiliation at graduation only'\n",
+    "        elif row['n_shared_pubs'] and not row['same_grad_inst']:\n",
+    "            return 'Shared publications only'\n",
+    "        elif row['n_shared_pubs'] and row['same_grad_inst']:\n",
+    "            return 'Shared publications and affiliation at graduation'\n",
     "        else:\n",
     "            return 'Other'\n",
     "\n",
     "bar_categories = [\n",
-    "    #'Other',\n",
-    "    'Not found/no affiliation match',\n",
-    "    'Found, but not confirmed',\n",
-    "    'Found and confirmed'\n",
+    "    'Not found',\n",
+    "    'No shared publications or affiliation at graduation',\n",
+    "    'Shared affiliation at graduation only',\n",
+    "    'Shared publications only',\n",
+    "    'Shared publications and affiliation at graduation',\n",
+    "    'Other'\n",
     "]\n",
     "\n",
     "# Apply the categorization function to create a new column\n",
     "extraction_df['match_category'] = extraction_df.apply(determine_category_contrib, axis=1)\n",
     "\n",
     "# filter out rows where 'phd_id' is Na, so that we only look at PhDs we could confirm\n",
-    "count_contrib_df = extraction_df.query('phd_id.notna()')[['contributor_name', 'match_category']]\n",
+    "count_contrib_df = extraction_df.query('phd_id.notna()')[['contributor_name', 'match_category']].copy()\n",
     "\n",
     "# Count how many contributors per match type\n",
     "match_contrib_counts = count_contrib_df['match_category'].value_counts().reindex(bar_categories)\n",
