Rework PhD plot - Make clearer - Refactor
Closes #43

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -43,6 +43,7 @@
     "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
     "from src.dataset_config_helpers import read_config, load_dataset\n",
     "from src.api_cache_helpers import initialize_request_cache\n",
+    "from src.plotters import PhDMatchPlotter\n",
     "\n",
     "# Initialize tqdm for progress bars\n",
     "tqdm.pandas()\n",
@@ -350,79 +351,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ensure one row per PhD by dropping duplicate names\n",
-    "count_phds_df = extraction_df[\n",
-    "    ['phd_name', 'phd_id', 'phd_match_by', 'phd_match_score', 'affiliation_match', 'near_exact_match', 'exact_match']\n",
-    "].drop_duplicates(subset='phd_name')\n",
-    "\n",
-    "n_phds = len(count_phds_df)\n",
-    "\n",
-    "count_phds_df['affiliation_match'] = (\n",
-    "    count_phds_df['affiliation_match']\n",
-    "    .fillna(False)\n",
-    ")\n",
-    "count_phds_df['exact_match'] = (\n",
-    "    count_phds_df['exact_match']\n",
-    "    .fillna(False)\n",
-    ")\n",
-    "\n",
-    "# Function to assign a match category based on the flags and phd_id\n",
-    "def determine_category_phd(row):\n",
-    "    # If a PhD was found but not confirmed (i.e. no match information)\n",
-    "    if pd.isna(row['phd_match_by']):\n",
-    "        return 'Not found in Open Alex at all'\n",
-    "    else:\n",
-    "        # Confirmed PhDs: split by exact and affiliation match\n",
-    "        if not row['phd_match_score']:\n",
-    "            return 'Found, but no other match, i.e. not confirmed'\n",
-    "        if not row['exact_match'] and not row['affiliation_match'] and not row['near_exact_match']:\n",
-    "            return 'Fuzzy only'\n",
-    "        elif not row['exact_match'] and row['affiliation_match'] and not row['near_exact_match']:\n",
-    "            return 'Fuzzy + affiliation'\n",
-    "        elif row['near_exact_match'] and not row['affiliation_match'] and not row['exact_match']:\n",
-    "            return 'Near exact only'\n",
-    "        elif row['near_exact_match'] and row['affiliation_match'] and not row['exact_match']:\n",
-    "            return 'Near exact + affiliation'\n",
-    "        elif row['exact_match'] and not row['affiliation_match']:\n",
-    "            return 'Exact only'\n",
-    "        elif row['exact_match'] and row['affiliation_match']:\n",
-    "            return 'Exact + affiliation'\n",
-    "        else:\n",
-    "            return 'Other'\n",
-    "\n",
-    "# Apply the categorization function to create a new column\n",
-    "count_phds_df['match_category'] = count_phds_df.apply(determine_category_phd, axis=1)\n",
-    "\n",
-    "bar_categories = [\n",
-    "    'Not found in Open Alex at all',\n",
-    "    'Found, but no other match, i.e. not confirmed',\n",
-    "    'Fuzzy only',\n",
-    "    'Fuzzy + affiliation',\n",
-    "    'Near exact only',\n",
-    "    'Near exact + affiliation',\n",
-    "    'Exact only',\n",
-    "    'Exact + affiliation'\n",
-    "    ]\n",
-    "confirmed_categories = bar_categories[1:]\n",
-    "\n",
-    "\n",
-    "# Count the number of PhDs per match category\n",
-    "match_counts = count_phds_df['match_category'].value_counts().reindex(bar_categories)\n",
-    "\n",
-    "# Calculate number of confirmed PhDs (those falling into the four confirmed categories)\n",
-    "n_confirmed_phds = count_phds_df['match_category'].isin(confirmed_categories).sum()\n",
-    "\n",
-    "# Create a bar plot of the categories\n",
-    "ax = match_counts.plot(kind='bar')\n",
-    "ax.bar_label(ax.containers[0], label_type='edge')\n",
-    "\n",
-    "# Set labels and titles for clarity\n",
-    "plt.xlabel(\"Match Category\")\n",
-    "plt.ylabel(\"Number of PhDs\")\n",
-    "plt.suptitle(\"PhD Matching Confirmation by Category\", fontsize=12)\n",
-    "plt.title(f\"Confirmed {n_confirmed_phds} out of {n_phds} PhDs\", fontsize=10)\n",
-    "\n",
-    "# Display the plot\n",
+    "plotter = PhDMatchPlotter(extraction_df)\n",
+    "ax = plotter.plot()\n",
     "plt.show()\n"
    ]
   },
