Rework and refactor contributor plot Closes #44

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -43,7 +43,7 @@
     "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
     "from src.dataset_config_helpers import read_config, load_dataset\n",
     "from src.api_cache_helpers import initialize_request_cache\n",
-    "from src.plotters import PhDMatchPlotter\n",
+    "from src.plotters import PhDMatchPlotter, ContributorMatchPlotter\n",
     "\n",
     "# Initialize tqdm for progress bars\n",
     "tqdm.pandas()\n",
@@ -380,22 +380,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plotter = ContributorMatchPlotter(extraction_df)\n",
+    "ax = plotter.plot()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def _missing_or_empty(value) -> bool:\n",
+    "    \"\"\"\n",
+    "    Handle cases where contributor was not found.\n",
+    "    True  → no contributor_id present\n",
+    "    False → contributor_id present\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # check for any kind of missing value\n",
+    "    if value is None or (isinstance(value, float) and pd.isna(value)):\n",
+    "        return True\n",
+    "    \n",
+    "    # check for iterable with length 0\n",
+    "    if isinstance(value, (list, tuple, set, np.ndarray)):\n",
+    "        return len(value) == 0\n",
+    "    return False\n",
+    "\n",
     "# Function to assign a match category based on the flags\n",
     "def determine_category_contrib(row):\n",
     "    # If a contributor was found but not confirmed (i.e. no match information)\n",
-    "    if pd.isnull(row['contributor_id']) or not row['contributor_id']:\n",
-    "        return 'Not found'\n",
+    "    if _missing_or_empty(row[\"contributor_id\"]):\n",
+    "        return \"Not found\"\n",
+    "    \n",
+    "    if not row['n_shared_pubs'] and not row['same_grad_inst']:\n",
+    "        return 'No shared publications or affiliation at graduation'\n",
+    "    elif not row['n_shared_pubs'] and row['same_grad_inst']:\n",
+    "        return 'Shared affiliation at graduation only'\n",
+    "    elif row['n_shared_pubs'] and not row['same_grad_inst']:\n",
+    "        return 'Shared publications only'\n",
+    "    elif row['n_shared_pubs'] and row['same_grad_inst']:\n",
+    "        return 'Shared publications and affiliation at graduation'\n",
     "    else:\n",
-    "        if not row['n_shared_pubs'] and not row['same_grad_inst']:\n",
-    "            return 'No shared publications or affiliation at graduation'\n",
-    "        elif not row['n_shared_pubs'] and row['same_grad_inst']:\n",
-    "            return 'Shared affiliation at graduation only'\n",
-    "        elif row['n_shared_pubs'] and not row['same_grad_inst']:\n",
-    "            return 'Shared publications only'\n",
-    "        elif row['n_shared_pubs'] and row['same_grad_inst']:\n",
-    "            return 'Shared publications and affiliation at graduation'\n",
-    "        else:\n",
-    "            return 'Other'\n",
+    "        return 'Other'\n",
+    "    \n",
     "\n",
     "bar_categories = [\n",
     "    'Not found',\n",
@@ -406,11 +436,28 @@
     "    'Other'\n",
     "]\n",
     "\n",
+    "confirmed_categories = bar_categories[3:]\n",
+    "\n",
+    "is_confirmed_row = extraction_df['match_category'].isin(confirmed_categories)\n",
+    "\n",
+    "extraction_df['has_confirmed_contributor'] = (\n",
+    "    is_confirmed_row\n",
+    "        .groupby(extraction_df['phd_id'])   # NaN forms its own group; yields False\n",
+    "        .transform('any') #  applies any() aggregation within each group, repeating the group-level result for each row.\n",
+    ")\n",
+    "\n",
     "# Apply the categorization function to create a new column\n",
     "extraction_df['match_category'] = extraction_df.apply(determine_category_contrib, axis=1)\n",
     "\n",
     "# filter out rows where 'phd_id' is Na, so that we only look at PhDs we could confirm\n",
     "count_contrib_df = extraction_df.query('phd_id.notna()')[['contributor_name', 'match_category']].copy()\n",
+    "\n",
+    "n_contribs = len(count_contrib_df)\n",
+    "n_confirmed = count_contrib_df['match_category'].isin(confirmed_categories).sum()\n",
+    "n_phds_with_confirmed_contrib = len(\n",
+    "    extraction_df.drop_duplicates(subset=['phd_name', 'phd_id'])\n",
+    "    .query('has_confirmed_contributor == True')\n",
+    ")\n",
     "\n",
     "# Count how many contributors per match type\n",
     "match_contrib_counts = count_contrib_df['match_category'].value_counts().reindex(bar_categories)\n",
@@ -425,10 +472,23 @@
     "plt.xlabel(\"Match Type\")\n",
     "plt.ylabel(\"Number of contributors\")\n",
     "plt.suptitle(\"Contributor Matching Confirmation by Type\", fontsize=12) # title\n",
-    "plt.title(f\"Only considering the {n_confirmed_phds} PhDs we could confirm\", fontsize=10) # subtile\n",
+    "plt.title(\n",
+    "    f\"Confirmed {n_confirmed} out of {n_contribs} contributors\\n\"\n",
+    "    f\"{n_phds_with_confirmed_contrib} out of {n_confirmed_phds} PhDs have ≥ 1 confirmed contributor\", \n",
+    "    fontsize=10\n",
+    ")\n",
     "\n",
     "# Display the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_phds_with_confirmed_contrib"
    ]
   }
  ],
