Make config argument optional in load_dataset() Necessary for #46

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "config = read_config('dataset_config.yaml')\n",
     "\n",
-    "pubs_df = load_dataset(config, dataset_path)\n",
+    "pubs_df = load_dataset(dataset_pat=dataset_path, config=config)\n",
     "\n",
     "pubs_df\n"
    ]
