Drop exact NARCIS duplicates Closes #47

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "config = read_config('dataset_config.yaml')\n",
     "\n",
-    "pubs_df = load_dataset(dataset_pat=dataset_path, config=config)\n",
+    "pubs_df = load_dataset(dataset_path=dataset_path, config=config)\n",
     "\n",
     "pubs_df\n"
    ]
@@ -160,7 +160,8 @@
    "outputs": [],
    "source": [
     "# replace institution abbreviation with names that can be found in OpenAlex\n",
-    "pubs_unabbrev_df = unabbreviate_institutions(pubs_df, 'institution')\n",
+    "# drop exact duplicates after this step\n",
+    "pubs_unabbrev_df = unabbreviate_institutions(pubs_df, 'institution').drop_duplicates()\n",
     "pubs_unabbrev_df\n"
    ]
   },
