--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -150,7 +150,9 @@
     "\n",
     "pubs_df = load_dataset(dataset_path=dataset_path, config=config)\n",
     "\n",
-    "pubs_df\n"
+    "pubs_df.pop('integer_id')\n",
+    "\n",
+    "pubs_df"
    ]
   },
   {
@@ -162,7 +164,21 @@
     "# replace institution abbreviation with names that can be found in OpenAlex\n",
     "# drop exact duplicates after this step\n",
     "pubs_unabbrev_df = unabbreviate_institutions(pubs_df, 'institution').drop_duplicates()\n",
-    "pubs_unabbrev_df\n"
+    "pubs_unabbrev_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Handling several contributors per PhD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PhD candidates with 4 or more supervisors (for information)."
    ]
   },
   {
@@ -171,7 +187,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PhD candidates with 4 or more supervisors (for information)\n",
     "contributor_cols = [f'contributor_{i}' for i in range(1, 11)]\n",
     "\n",
     "# Count non-missing contributor entries per row\n",
@@ -194,16 +209,44 @@
     "\n",
     "print(f\"There are {pubs_more_than_n_df.shape[0]} PhD candidates with 4 or more supervisors\")\n",
     "\n",
-    "pubs_more_than_n_df\n",
-    "\n",
-    "\n"
+    "pubs_more_than_n_df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Priority supervisor list from ResponsibleSupervision pilot\n",
+    "Remove lower rank contributors, c.f. [#49](https://github.com/StefKirsch/clean-and-enrich-phd-supervisor-data/issues/49)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose rank after which we cut of contributors.\n",
+    "# 1 means we only keep the first, 2 the first two etc.\n",
+    "min_rank_contrib = 1\n",
+    "\n",
+    "pubs_high_contrib_df = pubs_unabbrev_df.copy()\n",
+    "\n",
+    "# Get low ranking contributor columns \n",
+    "low_rank_contrib_cols = [\n",
+    "    col for col in contributor_cols \n",
+    "    if int(col.split('_')[1]) > min_rank_contrib\n",
+    "]\n",
+    "\n",
+    "pubs_high_contrib_df[low_rank_contrib_cols] = pd.NA\n",
+    "\n",
+    "pubs_high_contrib_df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Priority supervisor list from ResponsibleSupervision pilot\n",
     "\n",
     "This dataset was created during the Responsible Supervision pilot project, see [here](https://github.com/tamarinde/ResponsibleSupervision/tree/main/Pilot-responsible-supervision)."
    ]
@@ -262,7 +305,7 @@
     "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset\n",
     "\n",
     "# Apply the function to each row with a constant, preloaded model\n",
-    "extraction_series = pubs_unabbrev_df.progress_apply(\n",
+    "extraction_series = pubs_high_contrib_df.progress_apply(\n",
     "    lambda row: find_phd_and_supervisors_in_row(row, model),\n",
     "    axis=1\n",
     "    )\n",
@@ -343,7 +386,7 @@
     "# Export to CSV without the DataFrame index\n",
     "pubs_phd_not_confirmed_df.to_csv(\"data/output/phds_not_confirmed.csv\", index=False)\n",
     "\n",
-    "pubs_phd_not_confirmed_df\n"
+    "pubs_phd_not_confirmed_df"
    ]
   },
   {
@@ -354,7 +397,7 @@
    "source": [
     "plotter = PhDMatchPlotter(extraction_df)\n",
     "ax = plotter.plot()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -365,13 +408,13 @@
    "source": [
     "plotter = ContributorMatchPlotter(extraction_df)\n",
     "ax = plotter.plot()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -385,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
