--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -24,7 +24,12 @@
     "import pandas as pd\n",
     "\n",
     "# custom functions\n",
-    "from src.clean_names_helpers import remove_non_person_contributors_and_export, format_name_to_lastname_firstname, ensure_and_load_spacy_model"
+    "from src.clean_names_helpers import (\n",
+    "    remove_non_person_contributors_and_export,\n",
+    "    format_name_to_lastname_firstname, \n",
+    "    ensure_and_load_spacy_model, \n",
+    "    merge_near_duplicates_on_col\n",
+    ")"
    ]
   },
   {
@@ -112,11 +117,16 @@
     "# Remove rows where 'contributor' is NA\n",
     "pairs_filtered = pairs_filtered.dropna(subset=['contributor'])\n",
     "\n",
+    "# merge duplicates that only differ on affiliation column\n",
+    "#pairs_filtered = merge_near_duplicates_on_col(pairs_filtered, agg_col='institution')\n",
+    "\n",
     "# remove contributors that aren't people\n",
     "csv_path = \"data/removed_contributors.csv\"\n",
     "pairs_filtered = remove_non_person_contributors_and_export(pairs_filtered, csv_path, nlp, WHITELIST, BLACKLIST)\n",
     "\n",
-    "print(f\"{len(pairs_filtered)} columns are left.\")"
+    "print(f\"{len(pairs_filtered)} columns are left.\")\n",
+    "\n",
+    "pairs_filtered"
    ]
   },
   {
@@ -191,7 +201,50 @@
     "# Ensure correct data types and fill missing values with a suitable placeholder if necessary\n",
     "pubs = pubs.convert_dtypes()\n",
     "\n",
-    "len(pubs)"
+    "pubs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Diagnose - Check for function duplicate of PhD candidates\n",
+    "\n",
+    "In some cases we also get:\n",
+    "\n",
+    "- The same PhD listed twice under two different affiliations.\n",
+    "- PhDs that are listed more than 2 times.\n",
+    "- Different versions of the PhDs name (e.g. Podliesna, Svitlana VS Podliesna, S.S.).\n",
+    "- Different versions of the same thesis title.\n",
+    "\n",
+    "C.f. [#46](https://github.com/StefKirsch/clean-and-enrich-phd-supervisor-data/issues/46)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "duplicates_title = pubs_clean[pubs_clean.duplicated(subset=[\"title\"], keep=False)].sort_values(by=\"title\")\n",
+    "duplicates_title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "duplicates_name = pubs_clean[pubs_clean.duplicated(subset=[\"phd_name\"], keep=False)].sort_values(by='phd_name')\n",
+    "duplicates_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export Data"
    ]
   },
   {
@@ -232,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
