Refactor min contributor rank selection to dataset config

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -148,6 +148,13 @@
     "\n",
     "config = read_config('dataset_config.yaml')\n",
     "\n",
+    "# Rank after which we cut of contributors.\n",
+    "min_rank_contrib = config['min_rank_contrib'] or None\n",
+    "if min_rank_contrib:\n",
+    "    print(f\"Considering the first {min_rank_contrib} contributors per PhD candidate.\")\n",
+    "else:\n",
+    "    print(f\"Considering all contributors.\")\n",
+    "\n",
     "pubs_df = load_dataset(dataset_path=dataset_path, config=config)\n",
     "\n",
     "pubs_df.pop('integer_id')\n",
@@ -225,19 +232,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Choose rank after which we cut of contributors.\n",
-    "# 1 means we only keep the first, 2 the first two etc.\n",
-    "min_rank_contrib = 1\n",
-    "\n",
     "pubs_high_contrib_df = pubs_unabbrev_df.copy()\n",
     "\n",
     "# Get low ranking contributor columns \n",
-    "low_rank_contrib_cols = [\n",
-    "    col for col in contributor_cols \n",
-    "    if int(col.split('_')[1]) > min_rank_contrib\n",
-    "]\n",
+    "if min_rank_contrib:\n",
+    "    low_rank_contrib_cols = [\n",
+    "        col for col in contributor_cols \n",
+    "        if int(col.split('_')[1]) > min_rank_contrib\n",
+    "    ]\n",
     "\n",
-    "pubs_high_contrib_df[low_rank_contrib_cols] = pd.NA\n",
+    "    pubs_high_contrib_df[low_rank_contrib_cols] = pd.NA\n",
     "\n",
     "pubs_high_contrib_df\n"
    ]
@@ -322,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Analysis and Visualization"
+    "### Handle duplicate PhDs"
    ]
   },
   {
@@ -331,7 +335,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"We managed to find contributors with {extraction_df['n_shared_inst_grad'].sum()} shared institutions and {extraction_df['n_shared_pubs'].sum()} shared publications!\")"
+    "dups = extraction_df[extraction_df.duplicated(subset=['phd_name', 'phd_id'], keep=False)].sort_values(by='phd_name')\n",
+    "\n",
+    "dups"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Analysis and Visualization"
    ]
   },
   {
@@ -358,6 +371,15 @@
     "        raise FileNotFoundError(f\"File not found: {file_path}\")\n",
     "    \n",
     "extraction_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"We managed to find contributors with {extraction_df['n_shared_inst_grad'].sum()} shared institutions and {extraction_df['n_shared_pubs'].sum()} shared publications!\")"
    ]
   },
   {
