Align the numbers from the Diagnostics at a glance to what we have in the plots Closes #55

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -374,19 +374,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Diagnostics at a glance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"We managed to find contributors with {extraction_df['n_shared_inst_grad'].sum()} shared institutions and {extraction_df['n_shared_pubs'].sum()} shared publications!\")"
+    "n_phds = len(pubs_df)\n",
+    "\n",
+    "# Count the number of non-missing match information values (value exists == PhD confirmed, c.f. dd47028f21f3dfcf3967b54bc8d4a93da2cb4fd2)\n",
+    "n_confirmed_phds = (\n",
+    "    extraction_df.drop_duplicates(subset=['phd_name', 'phd_id'])['phd_match_by']\n",
+    "    .notna()\n",
+    "    .sum()\n",
+    ")\n",
+    "\n",
+    "n_considered_sups = pubs_high_contrib_df[contributor_cols].notna().sum().sum()\n",
+    "\n",
+    "n_confirmed_sups = extraction_df['contributor_confirmed'].sum()\n",
+    "\n",
+    "print(f\"Out of {n_phds} PhD candidates, we confirmed {n_confirmed_phds}.\")\n",
+    "\n",
+    "print(f\"Out of {n_considered_sups} considered contributors, we confirmed {n_confirmed_sups} as a supervisor.\")\n",
+    "\n",
+    "print(f\"We managed to find contributors with {extraction_df['n_shared_inst_grad'].sum()} shared institutions and {extraction_df['n_shared_pubs'].sum()} shared publications!\")\n",
+    "\n",
+    "pubs_high_contrib_df[contributor_cols]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get PhDs that we could not find in OpenAlex."
+    "### PhDs that we could not find in OpenAlex."
    ]
   },
   {
