Duplicates are identified by OpenAlex id

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dups = extraction_df[extraction_df.duplicated(subset=['phd_name', 'phd_id'], keep=False)].sort_values(by='phd_name')\n",
+    "dups = extraction_df[extraction_df.duplicated(subset=['phd_id'], keep=False)].sort_values(by='phd_name')\n",
     "\n",
     "dups"
    ]
