Filter publications to years between 2011 and 2022 C.f. #59

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -76,6 +76,7 @@
    "source": [
     "# Initialize values\n",
     "NROWS = None # None for all\n",
+    "YEAR_RANGE = range(2011,2022+1) # Years of interest are 2011 to 2022\n",
     "\n",
     "# names that spacy does not recognize as such\n",
     "# NOTE: Add the verbatim names here, not the standardized target notation \n",
@@ -112,17 +113,29 @@
    "outputs": [],
    "source": [
     "# remove duplicates\n",
-    "pairs_filtered = pairs_raw.drop_duplicates() \n",
+    "pairs_pruned = pairs_raw.drop_duplicates() \n",
     "\n",
     "# Remove rows where 'contributor' is NA\n",
-    "pairs_filtered = pairs_filtered.dropna(subset=['contributor'])\n",
+    "pairs_pruned = pairs_pruned.dropna(subset=['contributor'])\n",
+    "\n",
+    "# Filter to the years of interest\n",
+    "pairs_pruned = pairs_pruned.query(\n",
+    "    \"year in @YEAR_RANGE\"\n",
+    ")\n",
     "\n",
     "# merge duplicates that only differ on affiliation column\n",
-    "#pairs_filtered = merge_near_duplicates_on_col(pairs_filtered, agg_col='institution')\n",
-    "\n",
+    "#pairs_pruned = merge_near_duplicates_on_col(pairs_pruned, agg_col='institution')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# remove contributors that aren't people\n",
     "csv_path = \"data/removed_contributors.csv\"\n",
-    "pairs_filtered = remove_non_person_contributors_and_export(pairs_filtered, csv_path, nlp, WHITELIST, BLACKLIST)\n",
+    "pairs_filtered = remove_non_person_contributors_and_export(pairs_pruned, csv_path, nlp, WHITELIST, BLACKLIST)\n",
     "\n",
     "print(f\"{len(pairs_filtered)} columns are left.\")\n",
     "\n",
